--- a/package.json
+++ b/package.json
@@ -12,9 +12,20 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
+    "appwrite": "^10.2.0",
+    "axios": "^1.3.4",
     "next": "13.2.4",
+    "node-appwrite": "^8.2.0",
     "react": "18.2.0",
+    "react-appwrite": "^0.0.5",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.0"
   }
 }
