--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-appwrite": "^0.0.5",
     "react-dom": "18.2.0",
+    "react-no-ssr": "^1.1.0",
     "typescript": "5.0.2",
     "uuid": "^9.0.0"
   },
