--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-appwrite": "^0.0.5",
     "react-dom": "18.2.0",
     "react-no-ssr": "^1.1.0",
+    "react-promise": "^3.0.2",
     "typescript": "5.0.2",
     "uuid": "^9.0.0"
   },
