--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
     "@types/react-dom": "18.0.11",
     "appwrite": "^10.2.0",
     "axios": "^1.3.4",
+    "cors-anywhere": "^0.4.4",
     "next": "13.2.4",
+    "nextjs-cors": "^2.1.2",
     "node-appwrite": "^8.2.0",
     "react": "18.2.0",
     "react-appwrite": "^0.0.5",
     "react-dom": "18.2.0",
     "react-no-ssr": "^1.1.0",
     "react-promise": "^3.0.2",
+    "react-router-dom": "^6.10.0",
     "typescript": "5.0.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/react-no-ssr": "^1.1.3",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
