--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
+    "@tanstack/react-query": "^4.28.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
     "appwrite": "^10.2.0",
     "axios": "^1.3.4",
     "cors-anywhere": "^0.4.4",
+    "jotai": "^2.0.3",
     "next": "13.2.4",
     "nextjs-cors": "^2.1.2",
     "node-appwrite": "^8.2.0",
@@ -33,6 +35,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@swc-jotai/react-refresh": "^0.0.7",
     "@types/react-no-ssr": "^1.1.3",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.14",
