--- a/appwrite.json
+++ b/appwrite.json
@@ -31,6 +31,21 @@
             "events": [],
             "schedule": "",
             "timeout": 15
+        },
+        {
+            "$id": "6432f26ce12ba19185e0",
+            "name": "meilisearch-integration",
+            "runtime": "node-16.0",
+            "path": "functions/meilisearch-integration",
+            "entrypoint": "src/index.js",
+            "ignore": [
+                "node_modules",
+                ".npm"
+            ],
+            "execute": [],
+            "events": [],
+            "schedule": "",
+            "timeout": 15
         }
     ]
 }
